--- a/QQ音乐/my-music/package.json
+++ b/QQ音乐/my-music/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^7.0.1",
     "swiper": "^4.2.2",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
